# smoldyn_fork

./: .cproject  .project  CMakeLists.txt  README.md  README.txt  Toolchain-mingw32.cmake
Linux/: smoldyn_2.28-1_amd64.deb  smoldyn_2.28-1_i386.deb
documentation/SmolCrowd/: SmolCrowd_doc.doc
documentation/Smoldyn/: Smoldyn_doc1.doc  Smoldyn_doc2.tex
documentation/libSteve/: Geometry_doc.doc  RnSort_doc.doc  SimCommand_doc.doc  Sphere_doc.doc  Zn_doc.doc  math2_doc.doc  opengl2_doc.doc  parse_doc.doc  random2_doc.doc  rxnparam_doc.doc  string2_doc.doc
documentation/libmoleculizer_manual/: APIReference.tex  libmoleculizer_doc.doc  user-manual.tex
examples/S10_boxes/: box.txt  systemsize.txt
examples/S11_ports/: port.txt
examples/S12_moleculizer/: MinD.txt  abaccc.txt  abba.txt  abbbc.txt  allostery.txt  allostery2.txt  allreceptor.txt  binding.txt  cmdtrial.txt  modifications.txt  modifications2.txt  modifications3.txt  oligo.txt  omniReceptor.txt  polymer1.txt  polymer2.txt  rates1.txt  rates2.txt  rates3.txt  rates4.txt  rates5.txt  receptor-on-surface.txt  smallmol.txt  transformation-reactions.txt  work.txt  xmloutputfile.txt
examples/S13_filaments/: filament.txt  filament2.txt
examples/S1_intro/: bounce1.txt  bounce2.txt  bounce3.txt
examples/S2_config/: cmdlinedefine.txt  config.txt  configcolors.txt  define.txt  ifdefine.txt  paramscan.txt
examples/S3_space/: bounds1.txt  bounds2.txt
examples/S4_molecules/: molecule.txt  mollist.txt
examples/S5_graphics/: better.txt  graphics1.txt  graphics2.txt  graphics3.txt
examples/S6_commands/: addspecies.txt  appendfile.txt  appendfileout.txt  cmdfile.txt  cmdmanipulate.txt  cmdmovesurfacemol.txt  cmdobserve.txt  cmdtime1.txt  cmdtime2.txt  meansqrdisp2.txt
examples/S7_surfaces/: absorb1.txt  absorb2.txt  absorb3.txt  cellmesh.txt  cellmeshfile.txt  diffuse2.txt  diffuse3.txt  dumbbell.txt  jump1.txt  jump2.txt  jump3.txt  rafts.txt  rafts3D.txt  reflect1.txt  reflect2.txt  reflect3.txt  signal.txt  stick2.txt  surf1.txt  surf2.txt  surf2react.txt  surf3.txt  surfaceboundjump.txt  surfrxn.txt  transmit1.txt  transmit2.txt  transmit3.txt
examples/S95_regression/: addspecies.txt  allostery.txt  bounce2.txt  bounds1.txt  bounds2.txt  cmdmanipulate.txt  compartlogic.txt  compartrxn.txt  crowding.txt  diffa.txt  (+12 more)
source/: smoldynconfigure.h.in
source/libmoleculizer-1.1.2/: CMakeLists.txt  Makefile.in
source/libmoleculizer-1.1.2/demos/: Makefile.in
source/libmoleculizer-1.1.2/demos/demo-programs/: Makefile.in
source/libmoleculizer-1.1.2/demos/sample-models/: Makefile.in
source/libmoleculizer-1.1.2/doc/: Makefile.in
source/libmoleculizer-1.1.2/python-src/: Makefile.in
source/libmoleculizer-1.1.2/python-src/language_parser/: Makefile.in  mzrrulestoxmlconverter.py
source/libmoleculizer-1.1.2/python-src/language_parser/moleculizer/: __init__.py  moleculizer_xcpt.py  parsedmol.py
source/libmoleculizer-1.1.2/src/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/: Makefile.in  moleculizer_config.hh  moleculizer_config.hh.in
source/libmoleculizer-1.1.2/src/libmoleculizer/cpx/: Makefile.in  basicMol.hh  omniStructureQuery.hh  omniStructureQueryImpl.hh  plexSpcsMixinCanonicalNamingImpl.hh
source/libmoleculizer-1.1.2/src/libmoleculizer/dimer/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/fnd/: Makefile.in  basicReaction.hh  feature.hh  reactionNetworkDescription.hh  reactionNetworkDescriptionImpl.hh  sensitivityList.hh  stateVar.hh
source/libmoleculizer-1.1.2/src/libmoleculizer/ftr/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/mol/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/mzr/: Makefile.in  libmzr_c_interface.cc  libmzr_c_interface.h  moleculizer.cc  moleculizer.hh  mzrException.cc  mzrException.hh  mzrSpecies.hh  mzrSpeciesAutomorphism.cc  pythonRulesManager.cc  pythonRulesManager.hh  rxnDescriptionInterface.hh
source/libmoleculizer-1.1.2/src/libmoleculizer/nauty/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/nmr/: Makefile.in  abstractMol.hh  basicNameAssembler.hh  complexFormNameAssembler.cc  complexFormNameAssembler.hh  complexOutputState.hh  complexSpecies.cc  complexSpecies.hh  complexSpeciesEncoderNames.cc  complexSpeciesEncoderNames.hh  complexSpeciesOutputMinimizer.cc  complexSpeciesOutputMinimizer.hh  mangledNameAssembler.cc  mangledNameAssembler.hh  nameAssembler.hh  nameEncoderFactory.hh  namedMolecule.cc  namedMolecule.hh  nmrUnit.hh  partialTokenList.hh  permutation.hh  readableNameAssembler.hh
source/libmoleculizer-1.1.2/src/libmoleculizer/plex/: Makefile.in  mzrOmniStructureQueries.hh  mzrPlexSpecies.cc  mzrPlexSpecies.hh  parseOmniPlex.cc  plexEltName.cc  plexEltName.hh  plexUnit.cc
source/libmoleculizer-1.1.2/src/libmoleculizer/stoch/: Makefile.in
source/libmoleculizer-1.1.2/src/libmoleculizer/utl/: Makefile.in  autoCatalog.hh  autoVector.hh  writeOutputGraph.hh
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml++/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml++/exceptions/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml++/io/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml++/nodes/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml++/parsers/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/: Makefile.in  config.h  config.h.in  configure.in  nanohttp.c
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/include/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/include/libxml/: Makefile.in  xmlversion.h
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/python/: Makefile.in  libxml2-export.c  libxml2-py.c  libxml2-py.h  libxml2class.py  libxml2class.txt  setup.py
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/python/tests/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/libxml2/xstc/: Makefile.in
source/libmoleculizer-1.1.2/src/libxml++-1.0.5/win32_msvc6/: Makefile.in
(+107 files in other folders)
